# iaa_ufpr_laboratorio-de-ia

./: Material 01 - 2 - Trabalho Final 1.odt  Material 01 - 2 - Trabalho Final.docx
R/alunos_do_ensino_medio/knn/: knn.Rmd
R/biomassa/knn/: knn.Rmd
R/diabetes/knn/: knn.Rmd
R/imposto_de_renda/knn/: imposto_de_renda_knn.Rmd
R/previsao_do_tempo/knn/: knn.Rmd
R/veiculo/data_sets/: Material 03 - 5 - C - Veiculos - Dados - Novos Casos.csv
R/veiculo/knn/: .RData  veiculo_knn.Rmd  veiculo_knn.docx  veiculo_knn.html
admissao/knn/: knn.Rmd
alunos_do_ensino_medio/knn/: knn.Rmd
banco/knn/: knn.Rmd
biomassa/knn/: .Rhistory
iaa_ufpr_laboratorio_de_ia/: pyproject.toml
iaa_ufpr_laboratorio_de_ia/data/Prática Admissão-20220813/: Material 03 - 8 – R - Admissao - Dados - Novos Casos - R.csv
iaa_ufpr_laboratorio_de_ia/data/Prática Diabetes-20220813/: Material 03 - 9 – C - Diabetes - Dados - Novos Casos.csv
iaa_ufpr_laboratorio_de_ia/data/Prática Excel-20220813/: Material 02 - 1 – Exemplo 1 – Excel - Generico - GD.xlsx  Material 02 - 1 – Exemplo 1 – Excel - Generico - SGD - Mini-batch.xlsx  Material 02 - 1 – Exemplo 1 – Excel - Generico - SGD.xlsx  Material 02 - 1 – Exemplo 1 – Excel - Generico.xlsx  Material 02 - 1 – Exemplo 2 – Excel - Reconhecimento T e H.xlsx
