[tool.poetry]
name = "iaa_ufpr_laboratorio_de_ia"
version = "0.1.0"
description = ""
authors = ["LuanComputacao <eng.luanroger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
